# TetherDust

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.ci.yml  docker-compose.yml  docker-entrypoint.sh  mypy.ini  pyproject.toml  pyrefly.toml  ruff.toml
.github/: CLA.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  database_support.md  feature_request.md  security_vulnerability.md
.github/workflows/: ci.yml  release.yml
backend/api/: __init__.py  apps.py  exceptions.py  health.py  permissions.py  serializer_meta.py  urls.py
backend/core/: apps.py  builtin_docs.py  version.py
backend/engine/: apps.py  builtin_docs.py  ids.py  (+5 more)
changelog/: 0.1.0.md  0.1.1.md  0.1.2.md  0.2.0.md  0.3.0.md  0.3.1.md  0.3.2.md  0.3.3.md  0.3.4.md  0.3.5.md  0.3.6.md  0.4.0.md  0.4.1.md  0.4.10.md  0.4.11.md  0.4.12.md  0.4.13.md  0.4.14.md  0.4.15.md  0.4.16.md  0.4.17.md  0.4.18.md  0.4.19.md  0.4.2.md  0.4.20.md  0.4.21.md  0.4.22.md  0.4.23.md  0.4.3.md  0.4.4.md  0.4.5.md  0.4.6.md  0.4.7.md  0.4.8.md  0.4.9.md  0.5.0.md  0.5.1.md  0.5.2.md  0.5.3.md  0.5.4.md  (+10 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
tdmcp/: __init__.py  _context.py  server.py
tests/: conftest.py  test_builtin_mcp_seed.py  test_chat_xss_sanitization.py  test_db_access_enforcement.py  test_direct_api_agent.py  test_doc_prompts.py  test_github_client.py  test_ids.py  test_login_open_redirect.py  test_template_json_script.py  test_tool_call_scoping.py
tetherdust/: README.md  pyproject.toml
tetherdust/mcp_server/: server.py
tetherdust/mcp_server/tools/: _codebase_shared.py  _db_shared.py  create_documentation.py  get_report_data.py  get_table_schema.py  list_dashboards.py  list_reports.py  query_database.py  read_codebase_file.py  save_tether_graph.py  search_codebase.py
tetherdust/mcp_server/utils/: __init__.py  db_service.py  github_client.py
tetherdust/tests/: test_builtin_mcp_seed.py  test_chat_xss_sanitization.py  test_db_access_enforcement.py  test_direct_api_agent.py  test_doc_prompts.py  test_github_client.py  test_login_open_redirect.py  test_template_json_script.py  test_tool_call_scoping.py
tetherdust/web/: manage.py
tetherdust/web/console/: apps.py  context_processors.py  routing.py  urls.py
tetherdust/web/console/consumers/: __init__.py  chart_edit.py
tetherdust/web/console/forms/: agent.py  auth.py  connections.py  dashboards.py  reports.py  tethers.py
tetherdust/web/console/templates/console/: base.html  dashboard.html  login.html
tetherdust/web/console/templates/console/agents/: form.html  list.html  type_picker.html
tetherdust/web/console/templates/console/audit/: list.html
tetherdust/web/console/templates/console/codebases/: _status.html  list.html
tetherdust/web/console/templates/console/dashboards/: detail.html  form.html
tetherdust/web/console/templates/console/databases/: engine_picker.html
tetherdust/web/console/templates/console/databases/includes/: engine_icon.html
tetherdust/web/console/templates/console/docgen_logs/: detail.html  list.html
tetherdust/web/console/templates/console/docsources/: add_picker.html  form.html  generate_library.html
tetherdust/web/console/templates/console/docsources/includes/: source_type_icon.html
tetherdust/web/console/templates/console/mcp_servers/: list.html
tetherdust/web/console/templates/console/prompts/: form.html
tetherdust/web/console/templates/console/reports/: execution_detail.html  execution_list.html  form.html  list.html
tetherdust/web/console/templates/console/roles/: list.html
tetherdust/web/console/templates/console/sessions/: list.html
tetherdust/web/console/templates/console/sysconfig/: general_settings.html
tetherdust/web/console/templates/console/tethers/: detail.html  form.html  list.html
tetherdust/web/console/templates/console/users/: form.html
tetherdust/web/console/views/: __init__.py  _helpers.py  agent.py  audit.py  auth.py  codebase.py  dashboard.py  database.py  docsource.py  home.py  mcp_server.py  report.py  role_user.py  settings.py  tether.py  version.py
tetherdust/web/core/: builtin_mcp.py  signals.py  tasks.py  version.py
tetherdust/web/core/agents/: __init__.py  base.py  claude.py  codex.py  direct_api.py  mcp_filter.py  mcp_session.py
tetherdust/web/core/consumers/: audit.py  base.py  mcp_client.py  permissions.py  session.py
tetherdust/web/core/engines/: email_service.py  report_engine.py  result_storage.py  tether_engine.py
tetherdust/web/core/forms/: __init__.py  base.py
tetherdust/web/core/integrations/: github_client.py
tetherdust/web/core/migrations/: 0001_initial.py  0002_tether_codebase_doc_source.py
tetherdust/web/core/models/: __init__.py  _encryption.py  agent.py  auth.py  chat.py  connections.py  dashboards.py  reports.py  tethers.py
tetherdust/web/core/prompts/: __init__.py  tethers.py
tetherdust/web/portal/: context_processors.py  routing.py  urls.py
tetherdust/web/portal/consumers/: __init__.py  chat.py
tetherdust/web/portal/templates/portal/: chat.html  dashboards.html  docs.html
tetherdust/web/portal/templates/portal/tethers/: viewer.html
tetherdust/web/portal/views/: api.py  chat.py  dashboards.py  docs.py  reports.py  tethers.py
tetherdust/web/static/css/modules/: admin.css  animations.css  docs.css  forms.css  navbar.css  pages.css  reports.css
tetherdust/web/static/js/admin/: mcp-test.js
tetherdust/web/static/js/charts/: chart-form.js  dashboard.js
tetherdust/web/static/js/chat/: chat-app.js  markdown-renderer.js  mention-chips.js  message-render.js  ws-client.js
tetherdust/web/static/js/docsources/: generate.js  library.js
tetherdust/web/static/js/shell/: agent-status.js  confirm-delete.js  help-modal.js
tetherdust/web/static/js/tethers/: details.js  render.js  state.js  tether-bezier.js
tetherdust/web/tetherdust_web/: asgi.py  celery.py  settings.py  urls.py
(+528 files in other folders)
