[project]
name = "tetherdust-mcp-server"
version = "0.1.0"
description = "Multi-agent AI database querying system via Model Context Protocol"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TetherDust Team"}
]
keywords = ["mcp", "database", "ai", "llm", "natural-language-query"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "sqlglot>=25.0.0",  # AST-based read-only SQL validation (replaces regex)
]

[project.optional-dependencies]
# Database drivers - install as needed
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]
mssql = ["pymssql>=2.2.0"]
oracle = ["cx_oracle>=8.3.0"]
clickhouse = ["clickhouse-connect>=0.7.0"]
all-databases = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pymssql>=2.2.0",
    "clickhouse-connect>=0.7.0",
    "cryptography>=42.0.0",  # For decrypting credentials from admin DB
]
# HTTP transport for MCP server (SSE and Streamable HTTP)
sse = [
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.27.0",
    "anyio>=4.0.0",
]
# Django web application
web = [
    "django>=5.0.0",
    "channels>=4.0.0",
    "channels-redis>=4.2.0",
    "daphne>=4.0.0",
    "whitenoise>=6.6.0",  # Serves static files when DEBUG=False (production)
    "celery[redis]>=5.3.0",
    "cryptography>=42.0.0",  # For credential encryption
    "httpx>=0.27.0",
    "markdown>=3.5.0",  # Server-side markdown rendering for docs viewer
    "openpyxl>=3.1.0",  # Excel export for reports
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.15.17",
    "mypy~=2.1",
    "django-stubs>=5.0.0",
    "pre-commit>=3.7.0",
    "fastapi>=0.111.0",
    "types-psycopg2>=2.9.0",
    "types-Markdown>=3.6.0",
    "types-channels>=4.3.0",
    "types-openpyxl>=3.1.0",
    "celery-types>=0.22.0",
    "pyrefly>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tdmcp"]


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["tdmcp", "web"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "web/manage.py",
    "web/tetherdust_web/asgi.py",
    "web/tetherdust_web/wsgi.py",
]

[tool.coverage.report]
show_missing = true
# CI fails if total coverage drops below this. Baseline set just under the
# current ~11%; ratchet upward as test coverage grows.
fail_under = 10
