[project]
name = "tetherdust-mcp-server"
version = "0.1.0"
description = "Multi-agent AI database querying system via Model Context Protocol"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "TetherDust Team"}
]
keywords = ["mcp", "database", "ai", "llm", "natural-language-query"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "mcp>=1.6.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "sqlglot>=25.0.0",  # AST-based read-only SQL validation (replaces regex)
]

[project.optional-dependencies]
# Database drivers - install as needed
postgresql = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.1.0"]
mssql = ["pymssql>=2.2.0"]
oracle = ["cx_oracle>=8.3.0"]
clickhouse = ["clickhouse-connect>=0.7.0"]
all-databases = [
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.1.0",
    "pymssql>=2.2.0",
    "clickhouse-connect>=0.7.0",
    "cryptography>=42.0.0",  # For decrypting credentials from admin DB
]
# HTTP transport for MCP server (SSE and Streamable HTTP)
sse = [
    "starlette>=0.27.0",
    "uvicorn[standard]>=0.27.0",
    "anyio>=4.0.0",
]
# Django web application
web = [
    "django>=5.0.0",
    "channels>=4.0.0",
    "channels-redis>=4.2.0",
    "daphne>=4.0.0",
    "whitenoise>=6.6.0",  # Serves static files when DEBUG=False (production)
    "celery[redis]>=5.3.0",
    "cryptography>=42.0.0",  # For credential encryption
    "httpx>=0.27.0",
    "markdown>=3.5.0",  # Server-side markdown rendering for docs viewer
    "openpyxl>=3.1.0",  # Excel export for reports
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.3.0",
    "mypy~=2.1",
    "django-stubs>=5.0.0",
    "pre-commit>=3.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mcp_server"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"web/core/migrations/*.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
exclude = ["web/core/migrations/"]

[[tool.mypy.overrides]]
module = [
    "celery.*",
    "channels.*",
    "channels_redis.*",
    "daphne.*",
    "dotenv",
    "mcp.*",
    "pytest",
    "pytest.*",
    "starlette.*",
    "uvicorn.*",
    "anyio.*",
    "clickhouse_connect.*",
    "pymysql.*",
    "pymssql.*",
    "cx_oracle.*",
    "markdown.*",
    "openpyxl.*",
    "pydantic.*",
    "sqlalchemy.*",
    "sqlglot.*",
]
ignore_missing_imports = true

# Tests: test fakes/mocks intentionally violate production types
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

# Django model files: django-stubs requires explicit field annotations without the
# mypy_django_plugin. Suppress all errors here until we add the plugin.
[[tool.mypy.overrides]]
module = ["core.models.*"]
ignore_errors = true

# Views: @staff_member_required is untyped; request.user type needs concrete User model
[[tool.mypy.overrides]]
module = ["console.views.*", "portal.views.*"]
ignore_errors = true

# Console forms: cleaned_data typed as dict[str, Any], union-attr from user access
[[tool.mypy.overrides]]
module = ["console.forms.*"]
ignore_errors = true

# Context processors: request.user is AbstractBaseUser | AnonymousUser
[[tool.mypy.overrides]]
module = ["portal.context_processors", "console.context_processors"]
ignore_errors = true

# Celery tasks: @shared_task decorator is untyped
[[tool.mypy.overrides]]
module = ["core.tasks"]
disallow_untyped_decorators = false
ignore_errors = true

# Django signals
[[tool.mypy.overrides]]
module = ["core.signals"]
ignore_errors = true

# Channels consumers: @database_sync_to_async is untyped; AsyncWebsocketConsumer is Any
[[tool.mypy.overrides]]
module = [
    "core.consumers.*",
    "portal.consumers.*",
    "console.consumers.*",
    "mcp_server.server",
]
disallow_subclassing_any = false
disallow_untyped_decorators = false
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["mcp_server", "web"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "web/manage.py",
    "web/tetherdust_web/asgi.py",
    "web/tetherdust_web/wsgi.py",
]

[tool.coverage.report]
show_missing = true
# CI fails if total coverage drops below this. Baseline set just under the
# current ~11%; ratchet upward as test coverage grows.
fail_under = 10
